--- a/Front/index.html
+++ b/Front/index.html
@@ -9,8 +9,8 @@
     <h1>HACKATON</h1>
 
     <div class="search-bar">
-        <input type="text" placeholder="🔍 Buscar produto...">
-        <button class="btn" onclick="buscarProdutos()">Buscar</button>
+        <input type="text" id="busca-nome" placeholder="Buscar produto...">
+        <button class="btn" onclick="buscarProdutoPorNome()">Buscar</button>
     </div>
 
     <section class="form-section">
