--- a/Front/index.html
+++ b/Front/index.html
@@ -12,7 +12,7 @@
             <div class="menu-icon" onclick="toggleMenu()">☰</div>
             <ul id="menu-links" class="menu-links">
                 <li><a href="pagina2.html">Home</a></li>
-                <li><a href="cadastro.html">Cadastrar Produto</a></li>
+                <li><a href="index.html">Cadastrar Produto</a></li>
             </ul>
         </nav>
     </header>
