--- a/Front/index.html
+++ b/Front/index.html
@@ -2,132 +2,103 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hackaton - Cadastro de Produtos</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <header>
-        <h1>HACKATON</h1>
+        <h1><i class="fas fa-rocket"></i> HACKATON</h1>
         <nav class="menu">
-            <div class="menu-icon" onclick="toggleMenu()">☰</div>
+            <div class="menu-icon" onclick="toggleMenu()"><i class="fas fa-bars"></i></div>
             <ul id="menu-links" class="menu-links">
-                <li><a href="pagina2.html">Home</a></li>
-                <li><a href="index.html">Cadastrar Produto</a></li>
+                <li><a href="pagina2.html"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="index.html"><i class="fas fa-box"></i> Cadastrar Produto</a></li>
             </ul>
         </nav>
     </header>
 
-    <div class="search-bar">
-        <input type="text" id="busca-nome" placeholder="Buscar produto...">
-        <button class="btn" onclick="buscarProdutoPorNome()">Buscar</button>
-    </div>
+    <div class="container">
+        <div class="search-bar">
+            <input type="text" id="busca-nome" placeholder="Buscar produto...">
+            <button class="btn" onclick="buscarProdutoPorNome()"><i class="fas fa-search"></i> Buscar</button>
+        </div>
 
-    <div id="login-section" class="login-section">
-        <h2>Login</h2>
-        <label>Usuário:
-            <input type="text" id="login-username" placeholder="Digite o usuário">
-        </label>
-        <label>Senha:
-            <input type="password" id="login-password" placeholder="Digite a senha">
-        </label>
-        <button class="btn" onclick="fazerLogin()">Entrar</button>
-        <span id="login-error" class="error-message"></span>
-    </div>
+        <div id="login-section" class="login-section">
+            <h2><i class="fas fa-user-lock"></i> Login</h2>
+            <label>Usuário:
+                <input type="text" id="login-username" placeholder="Digite o usuário">
+            </label>
+            <label>Senha:
+                <input type="password" id="login-password" placeholder="Digite a senha">
+            </label>
+            <button class="btn" onclick="fazerLogin()"><i class="fas fa-sign-in-alt"></i> Entrar</button>
+            <span id="login-error" class="error-message"></span>
+        </div>
 
-    <section id="cadastro-section" class="form-section" style="display: none;">
-        <h2>Insira o produto desejado <span>• Cadastro de Produtos</span></h2>
-        <div class="form-left">
-            <label>Nome:
-                <input type="text" id="nome">
-                <span class="error-message" id="error-nome"></span>
-            </label>
-            <label>Descrição:
-                <input type="text" id="descricao">
-                <span class="error-message" id="error-descricao"></span>
-            </label>
-            <label>Cor:
-                <input type="text" id="cor">
-                <span class="error-message" id="error-cor"></span>
-            </label>
-            <label>Fabricante:
-                <input type="text" id="fabricante">
-                <span class="error-message" id="error-fabricante"></span>
-            </label>
-            <label>Preço:
-                <input type="number" id="preco" step="0.01">
-                <span class="error-message" id="error-preco"></span>
-            </label>
-            <label>Quantidade:
-                <input type="number" id="quantidade">
-                <span class="error-message" id="error-quantidade"></span>
-            </label>
-            <div id="imagens-container">
-                <label>URL da Imagem (1):
-                    <input type="url" class="imagem-url-input" placeholder="https://exemplo.com/imagem1.jpg" oninput="previewAllImages()">
-                </label>
+        <section id="cadastro-section" class="form-section" style="display: none;">
+            <h2>Insira o produto desejado <span>• Cadastro de Produtos</span></h2>
+            <div class="form-container">
+                <div class="form-left">
+                    <label>Nome:
+                        <input type="text" id="nome">
+                        <span class="error-message" id="error-nome"></span>
+                    </label>
+                    <label>Descrição:
+                        <input type="text" id="descricao">
+                        <span class="error-message" id="error-descricao"></span>
+                    </label>
+                    <label>Cor:
+                        <input type="text" id="cor">
+                        <span class="error-message" id="error-cor"></span>
+                    </label>
+                    <label>Fabricante:
+                        <input type="text" id="fabricante">
+                        <span class="error-message" id="error-fabricante"></span>
+                    </label>
+                    <label>Preço:
+                        <input type="number" id="preco" step="0.01">
+                        <span class="error-message" id="error-preco"></span>
+                    </label>
+                    <label>Quantidade:
+                        <input type="number" id="quantidade">
+                        <span class="error-message" id="error-quantidade"></span>
+                    </label>
+                    <div id="imagens-container">
+                        <label>URL da Imagem (1):
+                            <input type="url" class="imagem-url-input" placeholder="https://exemplo.com/imagem1.jpg" oninput="previewAllImages()">
+                        </label>
+                    </div>
+                    <span id="error-imagens" class="error-message"></span>
+                    <button type="button" class="btn" onclick="adicionarCampoImagem()"><i class="fas fa-plus"></i> Adicionar outra imagem</button>
+                    <button class="btn" onclick="cadastrarProduto()"><i class="fas fa-box"></i> Cadastrar Produto</button>
+                </div>
+                <div class="form-right">
+                    <p><strong>Pré-visualização das Imagens:</strong></p>
+                    <div id="preview-container" class="image-preview-container"></div>
+                </div>
             </div>
-            <span id="error-imagens" class="error-message"></span>
-            <button type="button" class="btn" onclick="adicionarCampoImagem()">+ Adicionar outra imagem</button>
-            <button class="btn" onclick="cadastrarProduto()">📦 Cadastrar Produto</button>
-        </div>
-        <div class="form-right">
-            <p><strong>Pré-visualização das Imagens:</strong></p>
-            <div id="preview-container" class="image-preview-container"></div>
-        </div>
-    </section>
+        </section>
 
-    <section class="remove-section">
-        <h2>Remover produtos</h2>
-        <label>Remover produto pelo nome:
-            <input type="text" id="nomeRemover">
-        </label>
-        <button class="btn danger" onclick="removerProduto()">🗑️ Remover Produto</button>
-    </section>
+        <section class="remove-section">
+            <h2><i class="fas fa-trash-alt"></i> Remover produtos</h2>
+            <label>Remover produto pelo nome:
+                <input type="text" id="nomeRemover">
+            </label>
+            <button class="btn danger" onclick="removerProduto()"><i class="fas fa-trash"></i> Remover Produto</button>
+        </section>
 
-    <section class="product-list-section">
-        <h2>Produtos Disponíveis</h2>
-        <div id="product-list" class="product-grid"></div>
-    </section>
-
-    <div id="editProductModal" class="modal" style="display: none;">
-    <div class="modal-content">
-        <span class="close" onclick="fecharModal()">&times;</span>
-        <h2>Editar Produto</h2>
-        <form id="edit-product-form">
-            <input type="hidden" id="edit-original-nome">
-            <label>Nome:
-                <input type="text" id="edit-nome">
-                <span id="error-edit-nome" class="error"></span>
-            </label>
-            <label>Descrição:
-                <textarea id="edit-descricao"></textarea>
-                <span id="error-edit-descricao" class="error"></span>
-            </label>
-            <label>Cor:
-                <input type="text" id="edit-cor">
-                <span id="error-edit-cor" class="error"></span>
-            </label>
-            <label>Fabricante:
-                <input type="text" id="edit-fabricante">
-                <span id="error-edit-fabricante" class="error"></span>
-            </label>
-            <label>Preço:
-                <input type="number" id="edit-preco" step="0.01">
-                <span id="error-edit-preco" class="error"></span>
-            </label>
-            <label>Quantidade:
-                <input type="number" id="edit-quantidade">
-                <span id="error-edit-quantidade" class="error"></span>
-            </label>
-            <div id="edit-imagens-container"></div>
-            <button type="button" class="btn" onclick="adicionarCampoImagemModal()">+ Adicionar outra imagem</button>
-            <div id="edit-preview-container" class="image-preview-container"></div>
-            <span id="error-edit-imagens" class="error"></span>
-            <button type="button" class="btn" onclick="atualizarProdutoPeloNome()">Atualizar Produto</button>
-            <button type="button" class="btn" onclick="fecharModal()">Cancelar</button>
-        </form>
+        <section class="product-list-section">
+            <h2><i class="fas fa-list"></i> Produtos Disponíveis</h2>
+            <div id="product-list" class="product-grid"></div>
+        </section>
     </div>
-</div>
+
+    <footer>
+        <p>&copy; 2025 Hackaton. Todos os direitos reservados.</p>
+    </footer>
 
     <script src="js/index.js"></script>
 </body>
