--- a/Front/index.html
+++ b/Front/index.html
@@ -96,6 +96,47 @@
         </section>
     </div>
 
+    <div id="editProductModal" class="modal" style="display: none;">
+            <div class="modal-content">
+                <span class="close" onclick="fecharModal()">&times;</span>
+                <h2><i class="fas fa-edit"></i> Editar Produto</h2>
+                <form id="edit-product-form">
+                    <input type="hidden" id="edit-original-nome">
+                    <label>Nome:
+                        <input type="text" id="edit-nome">
+                        <span class="error-message" id="error-edit-nome"></span>
+                    </label>
+                    <label>Descrição:
+                        <textarea id="edit-descricao"></textarea>
+                        <span class="error-message" id="error-edit-descricao"></span>
+                    </label>
+                    <label>Cor:
+                        <input type="text" id="edit-cor">
+                        <span class="error-message" id="error-edit-cor"></span>
+                    </label>
+                    <label>Fabricante:
+                        <input type="text" id="edit-fabricante">
+                        <span class="error-message" id="error-edit-fabricante"></span>
+                    </label>
+                    <label>Preço:
+                        <input type="number" id="edit-preco" step="0.01">
+                        <span class="error-message" id="error-edit-preco"></span>
+                    </label>
+                    <label>Quantidade:
+                        <input type="number" id="edit-quantidade">
+                        <span class="error-message" id="error-edit-quantidade"></span>
+                    </label>
+                    <div id="edit-imagens-container"></div>
+                    <span class="error-message" id="error-edit-imagens"></span>
+                    <button type="button" class="btn" onclick="adicionarCampoImagemModal()"><i class="fas fa-plus"></i> Adicionar outra imagem</button>
+                    <div id="edit-preview-container" class="image-preview-container"></div>
+                    <button type="button" class="btn" onclick="atualizarProdutoPeloNome()"><i class="fas fa-save"></i> Atualizar Produto</button>
+                    <button type="button" class="btn" onclick="fecharModal()"><i class="fas fa-times"></i> Cancelar</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
     <footer>
         <p>&copy; 2025 Hackaton. Todos os direitos reservados.</p>
     </footer>
